<resources>
    <string name="app_name">Movies Database</string>
    <string name="film_title">Film Title</string>
    <string name="description_film">Description Film</string>
    <string name="search_item">Search</string>
    <string name="todo">TODO</string>
    <string name="movie_database">Movie Database</string>
    <string name="credit">Created By Alvin M Defi</string>
    <string name="title_detail">Ad Astra</string>
    <string name="daftar_genre">Comedy, Action Dll</string>
    <string name="genre">Genre :</string>
    <string name="deskripsi">The near future, a time when both hope and hardships drive humanity to look to the stars and beyond. While a mysterious phenomenon menaces to destroy life on planet Earth, astronaut Roy McBride undertakes a mission across the immensity of space and its many perils to uncover the truth about a lost expedition that decades before boldly faced emptiness and silence in search of the unknown.</string>
    <string name="date_detail">27-08-1999</string>
    <string name="text_detail">414.12</string>
    <string name="popularity_detail">3596</string>
    <string name="description_detail">Description :</string>
</resources>
