<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <RelativeLayout
        android:id="@+id/ll001"
        android:layout_width="match_parent"
        android:layout_height="210dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            app:fabSize="mini"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/iv_backdrop_path"
            android:src="@drawable/background_main"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:contentDescription="@string/todo" />
        
        <ImageView
            android:id="@+id/iv_poster_path_detail"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/iv_backdrop_path"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="-50dp"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvTitle_Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_backdrop_path"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/iv_poster_path_detail"
            android:fontFamily="@font/nexabold"
            android:text="@string/title_detail"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvReleaseDateDetail"
            android:text="27-08-1999"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/iv_poster_path_detail"
            android:fontFamily="@font/nexabold"
            android:layout_below="@+id/tvTitle_Detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/pemisah"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/iv_poster_path_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/ivPopularityDetail"
            android:layout_marginEnd="30dp"
            android:layout_below="@+id/iv_poster_path_detail"
            android:layout_toStartOf="@+id/pemisah"
            android:src="@drawable/ic_popularity"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <ImageView
            android:layout_centerInParent="true"
            android:layout_below="@+id/iv_poster_path_detail"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/pemisah"
            android:src="@drawable/ic_remove_red_eye"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/tvPopularityDetail"
            android:text="414.12"
            android:textSize="28sp"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@+id/pemisah"
            android:layout_below="@+id/ivPopularityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/tvVoteCountDetail"
            android:text="3596"
            android:textSize="28sp"
            android:layout_marginStart="38dp"
            android:layout_toEndOf="@+id/pemisah"
            android:layout_below="@+id/ivPopularityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textView000001"
            android:fontFamily="@font/nexabold"
            android:text="@string/genre"
            android:textSize="21sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/tvPopularityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvGenreDetail"
            android:fontFamily="@font/nexalight"
            android:text="@string/daftar_genre"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/textView000001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textview002"
            android:textSize="21sp"
            android:text="Description :"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tvGenreDetail"
            android:fontFamily="@font/nexabold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescriptionDetail"
            android:textSize="15sp"
            android:text="@string/deskripsi"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/textview002"
            android:fontFamily="@font/nexalight"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</ScrollView>